@@ -1,6 +1,6 @@
 {
-  "count": 2,
-  "uniques": 2,
+  "count": 4,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2023-07-16T00:00:00Z",
@@ -10,6 +10,11 @@
     {
       "timestamp": "2023-07-19T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-28T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
